refactor : 커스텀 커서 추가 완료
body cursor none 처리, cursor pointer로 되어있는 부분 모두 제거,  context로 커서관리로 대체

--- a/src/App.css
+++ b/src/App.css
@@ -175,7 +175,7 @@
     font-family: 'Catallina';
     font-style: normal;
     font-weight: normal;
-    src :url('./assets/font/CatallinaRostype/Catallina.otf') format('opentype');
+    src: url('./assets/font/CatallinaRostype/Catallina.otf') format('opentype');
 }
 
 
@@ -201,6 +201,22 @@ html {
     body::-webkit-scrollbar {
         display: none;
     }
+}
+
+body {
+    cursor : none;
+}
+
+button {
+    cursor: none;
+}
+
+input {
+    cursor :none;
+}
+
+select {
+    cursor :none;
 }
 
 #root {
